--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,28 +23,18 @@ variables:
   SOURCE_CODE_PATH: '*/*/'
 
 pre_build:
-  stage: pre_build
-  script:
-    - echo $NUGET_USERNAME
-    - dotnet nuget add source $NUGET_URL --username $NUGET_USERNAME --password $NUGET_PASSWORD --store-password-in-clear-text
-
-build:
-  stage: build
-  rules:
-    - if: $CI_COMMIT_BRANCH == "main"
-      when: always
-  script:
-    - echo 'building'
-    - echo $NUGET_USERNAME
-    - dotnet publish -c release -o ./Build $APPLICATION_PROJECT_FOLDER/$APPLICATION_PROJECT_NAME.csproj
-    - dotnet pack $APPLICATION_PROJECT_FOLDER/$APPLICATION_PROJECT_NAME.csproj -c release --include-source --include-symbols -o ./Build
-    - cd Build
-    - ls
-
-publish:
   stage: publish
   rules:
     - if: $CI_COMMIT_BRANCH == "main"
       when: always
   script:
+    - dotnet nuget add source $NUGET_URL --username $NUGET_USERNAME --password $NUGET_PASSWORD --store-password-in-clear-text
+    - dotnet --version
+    - echo $APPLICATION_PROJECT_FOLDER/$APPLICATION_PROJECT_NAME.csproj
+    - dotnet publish -c release -o Build $APPLICATION_PROJECT_FOLDER/$APPLICATION_PROJECT_NAME.csproj
+    - dotnet pack $APPLICATION_PROJECT_FOLDER/$APPLICATION_PROJECT_NAME.csproj -c release --include-source --include-symbols -o Build
+    - cd Build
+    - ls
+    - dir
+    - echo $APPLICATION_PROJECT_NAME.$APPLICATION_NUGET_VERSION.nupkg
     - dotnet nuget push $APPLICATION_PROJECT_NAME.$APPLICATION_NUGET_VERSION.nupkg --source $NUGET_URL --api-key $NUGET_PASSWORD --skip-duplicate
