--- a/src/JK.Common.Aws.Authentication/JK.Common.Aws.Authentication.csproj
+++ b/src/JK.Common.Aws.Authentication/JK.Common.Aws.Authentication.csproj
@@ -1,10 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-	<Version>1.3.0</Version>
+	<Version>1.3.1</Version>
 	<Authors>Joseph Kandir</Authors>
 	<Description>AWS Cognito</Description>
   </PropertyGroup>
@@ -13,6 +13,10 @@
     <PackageReference Include="AWSSDK.CognitoIdentityProvider" Version="3.7.101.54" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.13" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Versions\" />
   </ItemGroup>
 
 </Project>
