--- a/src/JK.Common.Aws.Authentication/JK.Common.Aws.Authentication.csproj
+++ b/src/JK.Common.Aws.Authentication/JK.Common.Aws.Authentication.csproj
@@ -4,9 +4,9 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-	<Version>1.3.2</Version>
+	<Version>1.3.4</Version>
 	<Authors>Joseph Kandir</Authors>
-	<Description>AWS Cognito</Description>
+	<Description>AWS Cognito - List User from Pool Added in v1.3.3</Description>
   </PropertyGroup>
 
   <ItemGroup>
